# fluentia

./: .dockerignore  .env.example  .githooks.yaml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  check_code.sh  docker-compose.yml  pyproject.toml  render.yaml  tox.ini
.claude/: CLAUDE.md  CODEMAP.md  settings.local.json
.claude/codemap/: devops.md  documentation.md  testing.md  tools.md
.windsurf/rules/: project.md
docker/: entrypoint.sh  healthcheck.sh
docs/ai-assistance/: HELP.md
docs/ai-assistance/analysis/: HELP.md
docs/ai-assistance/analysis/2025-12-01-google-adk/: google-adk-integration-analysis.md
docs/ai-assistance/analysis/2026-04-07-gemini-3/: gemini-model-comparison.md  google-api-misalignments.md
docs/ai-assistance/code-review/: HELP.md
docs/ai-assistance/debug/: HELP.md
docs/ai-assistance/design/: HELP.md
docs/ai-assistance/design/2026-03-17-agent-selector/: detailed-design.md  details-backend.md  details-frontend.md  main.md  summary.md
docs/ai-assistance/design/2026-03-17-configurable-tools/: detailed-design.md  details-frontend.md  details-google-tools.md  implementation-plan.md  main.md  summary.md
docs/ai-assistance/design/2026-03-17-improve-conversation-tab/: detailed-design.md  main.md  summary.md
docs/ai-assistance/design/2026-03-17-tool-transparency/: detailed-design.md  details-frontend.md  details-tool-example.md  implementation-plan.md  main.md  summary.md
docs/ai-assistance/feature/: HELP.md
docs/ai-assistance/refactor/: HELP.md
docs/ai-assistance/refactor/2026-02-01-google-alternative/: 00-high-level-plan.md  PROGRESS.md  README.md
docs/ai-assistance/refactor/2026-03-16-livoia-redesign/: README.md
docs/ai-assistance/refactor/2026-03-16-livoia-redesign/1-first-round/: README.md
docs/ai-assistance/refactor/2026-03-16-livoia-redesign/1-first-round/claude/: 00-main.md  01-architecture.md  02-backend.md  03-frontend.md  04-tools.md  05-configuration.md  06-ci-cd.md  07-documentation.md  08-migration-plan.md  README.md
docs/ai-assistance/refactor/2026-03-16-livoia-redesign/1-first-round/gemini/: 01-requirements-and-architecture.md  02-cicd-and-containerization.md  03-documentation-strategy.md
docs/ai-assistance/refactor/2026-03-16-livoia-redesign/1-first-round/gpt/: README.md  architecture.md  ci-cd-and-quality.md  configuration-and-secrets.md  main.md  migration-inventory.md  roadmap.md  runtime-flows.md  target-repo-tree.md
docs/ai-assistance/refactor/2026-03-16-livoia-redesign/2-consolidation/: README.md
docs/ai-assistance/refactor/2026-03-16-livoia-redesign/2-consolidation/claude/: 01-comparative-analysis.md  02-synthesis-proposal.md  03-decision-rationale.md  README.md
docs/ai-assistance/refactor/2026-03-16-livoia-redesign/2-consolidation/gemini/: 00-consolidation-synthesis.md
docs/ai-assistance/refactor/2026-03-16-livoia-redesign/2-consolidation/gpt/: 00-main.md  01-variant-comparison.md  02-synthesized-architecture.md  03-target-repo-tree.md  04-file-level-migration-inventory.md  README.md
docs/ai-assistance/refactor/2026-03-16-livoia-redesign/3-second-round/: README.md
docs/ai-assistance/refactor/2026-03-16-livoia-redesign/3-second-round/claude/: 01-architecture.md  02-providers.md  03-session-and-events.md  04-agents-and-prompts.md  05-tools.md  06-configuration.md  07-frontend.md  08-observability.md  09-ci-cd.md  10-migration-plan.md  11-roadmap.md  README.md
docs/ai-assistance/refactor/2026-03-16-livoia-redesign/3-second-round/gemini/: 01-architecture.md  02-backend.md  03-tools-and-agents.md  04-infrastructure.md
docs/ai-assistance/refactor/2026-03-16-livoia-redesign/3-second-round/gpt/: README.md  agent-use-cases.md  architecture.md  ci-cd-and-quality.md  configuration-and-secrets.md  main.md  roadmap.md  (+3 more)
docs/discussions/: bedrock-ec2-deployment-fixes.md  codemap-semantic-search-tree.md  remaining-phases-5-and-6.md
docs/guides/: about-avature.md  code-style-guide.md  commit-message-guide.md  technical-writing-style-guide.md  test-development-guide.md
docs/reference/: agent-and-tools.md  provider-architecture.md  websocket-protocol.md
docs/tutorials/: docker-local-deployment.md  ec2-deployment.md  voice-interview-agent-cli-demo.md  voice-interview-agent-web-demo.md
resources/examples/: interview_questions_a.txt
resources/prompts/: interview_agent.txt  interview_agent_b.txt
resources/prompts/test/: system_prompt.jinja2
scripts/: voice_agent.py  voice_agent_legacy.py  voice_agent_manual.py  voice_agent_reference.py
src/fluentia/: __init__.py  app.py  config.py  main.py
src/fluentia/agents/: __init__.py  base.py  english_teacher.py  registry.py
src/fluentia/agents/templates/: english_teacher.j2
src/fluentia/observability/: __init__.py  health.py  logging.py  metrics.py
src/fluentia/providers/: __init__.py  base.py  google.py  google_tools.py
src/fluentia/providers/bedrock/: __init__.py  auth.py  client.py  config.py  provider.py
src/fluentia/session/: __init__.py  events.py  manager.py  protocol.py
src/fluentia/static/: index.html
src/fluentia/static/audio/: audio-processor.js
src/fluentia/static/css/: styles.css
src/fluentia/static/js/: app.js  audio-worklet.js
src/fluentia/tools/: __init__.py  base.py  processor.py  state.py
src/fluentia/tools/implementations/: __init__.py  date_time.py  weather.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_app.py
tests/unit/agents/: test_agents.py
tests/unit/config/: test_config.py
tests/unit/observability/: test_health.py  test_logging.py  test_metrics.py
tests/unit/providers/: test_base.py  test_google.py  test_google_tools.py
tests/unit/providers/bedrock/: test_client.py  test_config.py  test_provider.py
tests/unit/session/: test_events.py  test_manager.py
tests/unit/tools/: test_date_time.py  test_processor.py  test_weather.py
